<resources>
    <!-- splash and login -->
    <string name="welcome_to">Welcome to&#8230;</string>
    <string name="app_name">SimpleRes</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="button_send">Send</string>

    <!-- table statuses -->
    <string name="status_seated">Seated</string>
    <string name="status_entree">Entree</string>
    <string name="status_dessert">Dessert</string>
    <string name="status_paid">Paid</string>
    <string name="status_dirty">Dirty</string>
    <string name="status_empty">Empty</string>

    <!-- adding parties -->
    <string name="add_party">Add Party</string>
    <string name="party_reservation">Reservation</string>
    <string name="party_waitlist">Waitlist</string>
    <string name="party_walk_in">Walk-In</string>

    <!-- common -->
    <string name="guest_name">Guest name: </string>
    <string name="enter_name">Enter name</string>
    <string name="guest_phone_number">Phone number: </string>
    <string name="enter_number">Enter number</string>
    <string name="size_of_party">Party size: </string>
    <string name="enter_party_size">Size</string>

    <!-- reservation specific -->
    <string name="create_reservation">Create Reservation</string>
    <string name="reservation_date">Date of reservation: </string>
    <string name="select_date">Select date</string>
    <string name="empty_date">Month/Day/Year</string>
    <string name="reservation_time">Time of reservation: </string>
    <string-array name="reservation_times">
        <item>4:00pm</item>
        <item>4:30pm</item>
        <item>5:00pm</item>
        <item>5:30pm</item>
        <item>6:00pm</item>
        <item>6:30pm</item>
        <item>7:00pm</item>
        <item>7:30pm</item>
        <item>8:00pm</item>
        <item>8:30pm</item>
        <item>9:00pm</item>
    </string-array>
    <string name="reservation_notes">Reservation notes: </string>
    <string name="enter_res_notes">Enter reservation notes (optional)</string>

    <!-- waitlist specific -->
    <string name="add_to_waitlist">Add to Waitlist</string>
    <string name="quote_time">Quoted wait time: </string>
    <string-array name="quote_times">
        <item>0min</item>
        <item>5min</item>
        <item>10min</item>
        <item>20min</item>
        <item>25min</item>
        <item>30min</item>
        <item>35min</item>
        <item>40min</item>
        <item>45min</item>
        <item>50min</item>
        <item>60min</item>
    </string-array>
    <string name="waitlist_notes">Waitlist notes: </string>
    <string name="enter_wait_notes">Enter waitlist notes (optional)</string>

    <!-- party action menus -->
    <string name="seat_party">Seat</string>
    <string name="view_party">View</string>
    <string name="cancel_party">Cancel</string>
    <string name="party_here">Here</string>
    <string name="text_party">Text</string>

    <!-- view party pop-up -->
    <string name="exit_and_save">Save Changes</string>
    <string name="view_reservation">View Reservation</string>
    <string name="view_waitlist">View Waitlist Party</string>

    <!-- res list -->
    <string name="waitlist_text">Text</string>
    <string name="sent_text">Sent</string>
    <string name="res_arrived">Arrived</string>
    <string name="res_here">Here</string>

    <!-- calendar -->
    <string name="on_date">On Date</string>
    <string name="display_date">Month Day, Year</string>
    <string name="reservations_made">Reservations made: </string>
    <string name="covers_completed">covers were completed</string>

    <!-- seat walk in party -->
    <string name="seat_walk_in">Seat Walk-In Party</string>
    <string name="select_table">Select A Table</string>
    <string name="enter_walk_in_size">Size of Walk-In:</string>
    <string name="enter_size">Size</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="save">Save</string>
    <string name="app_logo">App logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="exit_button">Exit button</string>
    <string name="_0">0</string>
    <string name="completed_covers">Completed Covers:</string>
    <string name="cancel_seating">Cancel Seating</string>
    <string name="_109">109</string>
    <string name="_108">108</string>
    <string name="_103">103</string>
    <string name="_107">107</string>
    <string name="_106">106</string>
    <string name="_105">105</string>
    <string name="_202">202</string>
    <string name="_104">104</string>
    <string name="_102">102</string>
    <string name="_101">101</string>
    <string name="_201">201</string>
    <string name="size">Size</string>
    <string name="party_name">Party name</string>
    <string name="time">Time</string>
    <string name="no_parties_on_waitlist_at_this_time">No parties on waitlist at this time!</string>
    <string name="no_reservations_have_been_made">No reservations have been made!</string>
    <string name="reservations">Reservations</string>
    <string name="waitlist">Waitlist</string>
    <string name="access_calendar">access_calendar</string>
    <string name="plus_button">plus_button</string>
    <string name="exit_adding_to_waitlist">exit_adding_to_waitlist</string>
    <string name="loading">Loading…</string>
    <string name="add_to_wait_time">Add to wait time:</string>
    <string name="empty_future_reservation">No reservations have been made for this date!</string>

</resources>
