<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131018"
    tools:context=".ViewReservationPopup">

    <TextView
        android:id="@+id/createReservationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/view_reservation"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitViewRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/exit_button" />

    <TextView
        android:id="@+id/guest_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/guest_name"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createReservationText" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color1"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@color/color1"
        android:textColorHint="@color/color1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_name"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/guest_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="32dp"
        android:text="@string/guest_phone_number"
        android:textColor="@color/color1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name" />

    <EditText
        android:id="@+id/enter_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color1"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_number"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/color1"
        android:textColorHint="@color/color1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_phone_number"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/reservation_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="32dp"
        android:text="@string/reservation_notes"
        android:textColor="@color/color1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_number" />

    <EditText
        android:id="@+id/enter_res_notes"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color1"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="start|top"
        android:hint="@string/enter_res_notes"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textAlignment="textStart"
        android:textColor="@color/color1"
        android:textColorHint="@color/color1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_notes"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/reservation_date"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="32dp"
        android:text="@string/reservation_date"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/guest_name"
        app:layout_constraintTop_toBottomOf="@+id/createReservationText" />

    <TextView
        android:id="@+id/display_date"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/empty_date"
        android:textColor="@color/color1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/enter_name"
        app:layout_constraintTop_toBottomOf="@+id/reservation_date" />

    <Button
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/display_date"
        app:layout_constraintTop_toBottomOf="@+id/reservation_date" />

    <TextView
        android:id="@+id/wait_times"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="32dp"
        android:text="@string/reservation_time"
        android:textColor="@color/color1"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/guest_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/display_date" />

    <Spinner
        android:id="@+id/reservation_times"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color1"
        android:clipChildren="false"
        android:dropDownHeight="50dp"
        android:popupBackground="@android:color/transparent"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/enter_number"
        app:layout_constraintTop_toBottomOf="@+id/wait_times" />

    <TextView
        android:id="@+id/party_size"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="32dp"
        android:text="@string/size_of_party"
        android:textColor="@color/color1"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/reservation_notes"
        app:layout_constraintTop_toBottomOf="@+id/reservation_times" />

    <EditText
        android:id="@+id/enter_party_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color1"
        android:digits="123456789"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_party_size"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/color1"
        android:textColorHint="@color/color1"
        app:layout_constraintStart_toEndOf="@+id/enter_res_notes"
        app:layout_constraintTop_toBottomOf="@+id/party_size"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/exit_and_save"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="57dp"
        android:text="@string/exit_and_save"
        app:layout_constraintStart_toEndOf="@+id/enter_res_notes"
        app:layout_constraintTop_toBottomOf="@+id/enter_party_size" />


</androidx.constraintlayout.widget.ConstraintLayout>